--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
   },
   "dependencies": {
     "@google/genai": "^1.21.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react": "^19.1.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20251128.0",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0",
-    "wrangler": "^4.51.0"
+    "vite": "^6.2.0"
   }
 }
