--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
     ],
     "skipLibCheck": true,
     "types": [
-      "node",
-      "worker-types"
+      "node"
     ],
     "moduleResolution": "bundler",
     "isolatedModules": true,
