--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@google/genai": "^1.21.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "swr": "^2.3.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
