--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "skipLibCheck": true,
     "types": [
       "node",
+      "vite/client",
       "@cloudflare/workers-types"
     ],
     "moduleResolution": "bundler",
